# SlabGCN

./: .gitignore  LICENSE  README.md  config.json  config_train.json  environment.yml  install.py  pyproject.toml  requirements.txt  slabgcn.py
data/: dband_centers.csv
src/: analysis.py  constants.py  data.py  featurizers.py  graphs.py  models.py  optimization.py  plot_utils.py  samplers.py  thermodynamics.py  train.py  utils.py
